--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 h1 {
+    margin-top: 0;
     font-family: Courier New, Courier, monospace;
     text-align: center;
     background-color: black;
@@ -24,6 +25,15 @@ button {
     border-radius: 10%;
     box-shadow: 5px 5px gray;
     font-family: Courier New, Courier, monospace;
+}
+
+button:active {
+    background-color: rgb(230, 230, 230);
+}
+
+#br {
+    font-size: 1.5em;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #credit {
