--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ button:active {
     font-family: 'Courier New', Courier, monospace;
 }
 
+body {
+    background-color: rgb(245, 245, 220);
+}
+
 #credit {
     font-family: 'Courier New', Courier, monospace;
     position: fixed;
